--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.example.with-camera"
+      "bundleIdentifier": "com.example.with-camera",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -29,6 +32,16 @@
       "eas": {
         "projectId": "bc2da181-3278-4942-b892-d0acea23f64f"
       }
-    }
+    },
+    "plugins": [
+          [
+            "expo-build-properties",
+            {
+              "android": {
+                "kotlinVersion": "1.9.25"
+              }
+            }
+          ]
+        ]
   }
 }
