Met à jour kotlinVersion à 1.9.25 via expo-build-properties

--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "bc2da181-3278-4942-b892-d0acea23f64f"
+        "projectId": "SnapSAAMP"
       }
     },
     "plugins": [
