Met à jour kotlinVersion à 1.9.25 via expo-build-properties

--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "SnapSAAMP"
+        "projectId": "a5aeded1-78e2-4ac9-9cfe-29b5fc9b1be5"
       }
     },
     "plugins": [
