--- a/package.json
+++ b/package.json
@@ -1,26 +1,33 @@
 {
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@types/react": "~18.3.12",
+    "cross-fetch": "^4.1.0",
     "expo": "^52.0.16",
+    "expo-build-properties": "~0.13.2",
     "expo-camera": "^16.0.17",
     "expo-image": "~2.0.3",
     "expo-image-manipulator": "^13.0.6",
+    "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.7",
     "react-native-signature-canvas": "^4.7.2",
     "react-native-view-shot": "~4.0.3",
     "react-native-web": "~0.19.6",
-    "typescript": "~5.3.3",
-    "expo-build-properties": "~0.13.2"
+    "react-native-webview": "13.12.5",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
-  }
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "latest",
+    "@types/react-native": "^0.72.8"
+  },
+  "name": "SnapSAAMP",
+  "version": "1.0.0"
 }
